# clockify-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.toml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: keep-warm.yml
commands/: clockify-gaps.md  clockify-schedule-daily.md  clockify-sync-mappings.md  log-session.md
docs/: install-for-colleagues.docx
gcp/kill-switch/: README.md  main.py  requirements.txt
hooks/: clockify-nudge.sh  hooks.json
skills/clockify-gaps/: SKILL.md
skills/log-session/: SKILL.md
src/clockify_mcp/: __init__.py  auth.py  cache.py  cli.py  client.py  config.py  errors.py  http_app.py  reports.py  server.py  state.py  time_parsing.py
tests/: conftest.py  test_auth.py  test_cache.py  test_client.py  test_http_app.py  test_reports.py  test_server.py  test_time_parsing.py
